drawing products by javascript

--- a/index.html
+++ b/index.html
@@ -71,172 +71,6 @@
           <div class="basket_separator"></div>
 
           <div class="basket_products">
-            <div class="basket_productsItem">
-              <div class="basket_productImgWrap">
-                <input
-                  type="checkbox"
-                  id="first"
-                  name="first"
-                  class="basket_productCheckbox"
-                />
-                <div class="basket_productSize">56</div>
-                <img
-                  src="./images/products/product-img1.png"
-                  class="basket_productImg"
-                />
-              </div>
-
-              <div class="basket_productCaption">
-                <p class="basket_productCaptionName">
-                  Футболка UZcotton мужская
-                </p>
-                <div class="basket_productCaptionColor">
-                  <p>Цвет: белый</p>
-                  <p class="basket_productCaptionSize">Размер: 56</p>
-                </div>
-                <p class="basket_productCaptionStore">Коледино WB</p>
-                <div class="basket_productCaptionProvider">
-                  ООО Вайлдберриз
-                  <img
-                    src="./images/icons/icon-tooltip-provider.svg"
-                    alt="provider"
-                  />
-                </div>
-              </div>
-              <div class="basket_productBtns">
-                <div class="basket_productCounter">
-                  <div class="basket_counterMinus">−</div>
-                  <div class="basket_counterAmount">1</div>
-                  <div class="basket_counterPlus">+</div>
-                </div>
-                <p class="basket_productRemains">Осталось 2 шт.</p>
-                <div class="basket_productBtnWrap">
-                  <img
-                    src="./images/icons/icon-favourite.svg"
-                    alt="favourite"
-                    class="basket_productFavourite"
-                  />
-                  <img
-                    src="./images/icons/icon-delete.svg"
-                    alt="delete"
-                    class="basket_productDelete"
-                  />
-                </div>
-              </div>
-              <div class="basket_productPrice">
-                <div class="basket_productActualPrice">522 <div class="basket_productCurrency">сом</div></div>
-                <div class="basket_productOldPrice">1051 сом</div>
-              </div>
-            </div>
-            <div class="basket_productSeparator"></div>
-            <div class="basket_productsItem">
-              <div class="basket_productImgWrap">
-                <input
-                  type="checkbox"
-                  id="second"
-                  name="second"
-                  class="basket_productCheckbox"
-                />
-                <img
-                  src="./images/products/product-img2.png"
-                  class="basket_productImg"
-                />
-              </div>
-
-              <div class="basket_productCaption">
-                <p class="basket_productCaptionName">
-                  Силиконовый чехол картхолдер (отверстия) для карт, прозрачный
-                  кейс бампер на Apple iPhone XR, MobiSafe
-                </p>
-                <p class="basket_productCaptionColor">Цвет: прозрачный</p>
-                <p class="basket_productCaptionStore">Коледино WB</p>
-                <div class="basket_productCaptionProvider">
-                  ООО Мегапрофстиль
-                  <img
-                    src="./images/icons/icon-tooltip-provider.svg"
-                    alt="provider"
-                  />
-                </div>
-              </div>
-              <div class="basket_productBtns">
-                <div class="basket_productCounter">
-                  <div class="basket_counterMinus">−</div>
-                  <div class="basket_counterAmount">200</div>
-                  <div class="basket_counterPlus">+</div>
-                </div>
-                <div class="basket_productBtnWrap">
-                  <img
-                    src="./images/icons/icon-favourite.svg"
-                    alt="favourite"
-                    class="basket_productFavourite"
-                  />
-                  <img
-                    src="./images/icons/icon-delete.svg"
-                    alt="delete"
-                    class="basket_productDelete"
-                  />
-                </div>
-              </div>
-              <div class="basket_productPrice">
-                <div class="basket_productActualPrice">2 100 047 <div class="basket_productCurrency">сом</div></div>
-                <div class="basket_productOldPrice">2 300 047 сом</div>
-              </div>
-            </div>
-            <div class="basket_productSeparator"></div>
-            <div class="basket_productsItem">
-              <div class="basket_productImgWrap">
-                <input
-                  type="checkbox"
-                  id="second"
-                  name="second"
-                  class="basket_productCheckbox"
-                />
-                <img
-                  src="./images/products/product-img3.png"
-                  class="basket_productImg"
-                />
-              </div>
-
-              <div class="basket_productCaption">
-                <p class="basket_productCaptionName">
-                  Карандаши цветные Faber-Castell "Замок", набор 24 цвета,
-                  заточенные, шестигранные, Faber-Castell
-                </p>
-
-                <p class="basket_productCaptionStore">Коледино WB</p>
-                <div class="basket_productCaptionProvider">
-                  ООО Вайлдберриз
-                  <img
-                    src="./images/icons/icon-tooltip-provider.svg"
-                    alt="provider"
-                  />
-                </div>
-              </div>
-              <div class="basket_productBtns">
-                <div class="basket_productCounter">
-                  <div class="basket_counterMinus">−</div>
-                  <div class="basket_counterAmount">2</div>
-                  <div class="basket_counterPlus">+</div>
-                </div>
-                <p class="basket_productRemains">Осталось 2 шт.</p>
-                <div class="basket_productBtnWrap">
-                  <img
-                    src="./images/icons/icon-favourite.svg"
-                    alt="favourite"
-                    class="basket_productFavourite"
-                  />
-                  <img
-                    src="./images/icons/icon-delete.svg"
-                    alt="delete"
-                    class="basket_productDelete"
-                  />
-                </div>
-              </div>
-              <div class="basket_productPrice">
-                <div class="basket_productActualPrice">494 <div class="basket_productCurrency">сом</div></div>
-                <div class="basket_productOldPrice">950 сом</div>
-              </div>
-            </div>
           </div>
           <div class="basket_absent">
             <div class="basket_absentTitleWrap">
@@ -249,91 +83,7 @@
             </div>
             <div class="basket_separator"></div>
             <div class="basket_absentProducts">
-              <div class="basket_absentItem">
-                <div class="basket_absentInfo">
-                  <div class="basket_absentImgWrap">
-                    <img
-                      src="./images/products/absent-img1.png"
-                      alt="first-absent"
-                      class="basket_absentImg"
-                    />
-                    <div class="basket_productSize">56</div>
-                  </div>
-                  <div class="basket_absentCaption">
-                    <div class="basket_absentCaptionName">
-                      Футболка UZcotton мужская
-                    </div>
-                    <div class="basket_absentCaptionColor">
-                      Цвет: белый
-
-                      <p class="basket_productCaptionSize">Размер: 56</p>
-                    </div>
-                  </div>
-                </div>
-                <div class="basket_absentBtns">
-                  <img
-                    src="./images/icons/icon-favourite.svg"
-                    alt="favourite"
-                  />
-                  <img src="./images/icons/icon-delete.svg" alt="delete" />
-                </div>
-              </div>
-              <div class="basket_productSeparator"></div>
-
-              <div class="basket_absentItem">
-                <div class="basket_absentInfo">
-                  <div class="basket_absentImgWrap">
-                    <img
-                      src="./images/products/absent-img2.png"
-                      alt="second-absent"
-                      class="basket_absentImg"
-                    />
-                  </div>
-                  <div class="basket_absentCaption">
-                    <div class="basket_absentCaptionName">
-                      Силиконовый чехол картхолдер (отверстия) для карт,
-                      прозрачный кейс бампер на Apple iPhone XR, MobiSafe
-                    </div>
-                    <div class="basket_absentCaptionColor">
-                      Цвет: прозрачный
-                    </div>
-                  </div>
-                </div>
-                <div class="basket_absentBtns">
-                  <img
-                    src="./images/icons/icon-favourite.svg"
-                    alt="favourite"
-                  />
-                  <img src="./images/icons/icon-delete.svg" alt="delete" />
-                </div>
-              </div>
-              <div class="basket_productSeparator"></div>
-
-              <div class="basket_absentItem">
-                <div class="basket_absentInfo">
-                  <div class="basket_absentImgWrap">
-                    <img
-                      src="./images/products/absent-img3.png"
-                      alt="third-absent"
-                      class="basket_absentImg"
-                    />
-                    <div class="basket_productSize">56/54/52...</div>
-                  </div>
-                  <div class="basket_absentCaption">
-                    <div class="basket_absentCaptionName">
-                      Карандаши цветные Faber-Castell "Замок", набор 24 цвета,
-                      заточенные, шестигранные, Faber-Castell
-                    </div>
-                  </div>
-                </div>
-                <div class="basket_absentBtns">
-                  <img
-                    src="./images/icons/icon-favourite.svg"
-                    alt="favourite"
-                  />
-                  <img src="./images/icons/icon-delete.svg" alt="delete" />
-                </div>
-              </div>
+              
             </div>
           </div>
         </div>
@@ -513,7 +263,10 @@
         <section class="charge">
           <h3 class="chargeTitle">
             Итого
-            <div class="chargeAmount">2 101 063 <div class="chargeCurrency">сом</div></div>
+            <div class="chargeAmount">
+              2 101 063
+              <div class="chargeCurrency">сом</div>
+            </div>
           </h3>
           <div class="charge_caption">
             <div class="charge_captionProducts">
@@ -532,9 +285,15 @@
           <div class="charge_delivery">
             <div class="charge_deliveryTitleWrap">
               <h3 class="charge_deliveryTitle">Доставка в пункт выдачи</h3>
-              <img src="./images/icons/icon-correct.svg" alt="correct" class="charge_correctBtn">
+              <img
+                src="./images/icons/icon-correct.svg"
+                alt="correct"
+                class="charge_correctBtn"
+              />
             </div>
-            <p class="charge_deliveryAddress">Бишкек, улица Ахматбека Суюмбаева, 12/1</p>
+            <p class="charge_deliveryAddress">
+              Бишкек, улица Ахматбека Суюмбаева, 12/1
+            </p>
             <p><a href="#" class="charge_deliveryDate">5–8 фев</a></p>
           </div>
           <div class="charge_tooltipWrap">
@@ -551,11 +310,15 @@
           <div class="charge_payment">
             <div class="charge_paymentTitleWrap">
               <h3 class="charge_paymentTitle">Оплата картой</h3>
-              <img src="./images/icons/icon-correct.svg" alt="correct" class="charge_correctBtn">
+              <img
+                src="./images/icons/icon-correct.svg"
+                alt="correct"
+                class="charge_correctBtn"
+              />
             </div>
             <div class="charge_paymentData">
               <div class="charge_paymentSystem">
-                <img src="./images/icons/icon-mir.svg" alt="mir">
+                <img src="./images/icons/icon-mir.svg" alt="mir" />
               </div>
               <div class="charge_paymentNumber">1234 12•• •••• 1234</div>
             </div>
@@ -606,5 +369,6 @@
         <img src="./images/icons/tabbar-icons/profile.svg" alt="profile" />
       </div>
     </section>
+    <script src="./index.js" type="module"></script>
   </body>
 </html>
