--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
       <section class="basket">
         <div class="basket_container">
           <h2 class="basket_title">Корзина</h2>
+          <div class="basket_actualProducts">
           <div class="basket_checkboxWrap">
             <input
               type="checkbox"
@@ -72,6 +73,7 @@
 
           <div class="basket_products">
           </div>
+        </div>
           <div class="basket_absent">
             <div class="basket_absentTitleWrap">
               <h4 class="basket_absentTitle">Отсутствуют · 3 товара</h4>
@@ -165,10 +167,11 @@
               />
               <p class="basket_tooltipCaption">
                 Обратная доставка товаров на склад при отказе —
-                <a class="basket_tooltipCaption-underlined" href="#"
-                  >бесплатно</a
-                >
+                <span class="basket_tooltipCaption-underlined">бесплатно</span>
               </p>
+              <div class="basket_deliveryTooltip">
+                Если товары вам не подойдут, мы вернем их обратно на склад — это бесплатно
+              </div>
             </div>
           </div>
         </section>
@@ -285,11 +288,10 @@
           <div class="charge_delivery">
             <div class="charge_deliveryTitleWrap">
               <h3 class="charge_deliveryTitle">Доставка в пункт выдачи</h3>
-              <img
-                src="./images/icons/icon-correct.svg"
-                alt="correct"
-                class="charge_correctBtn"
-              />
+              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none" class="charge_correctBtn">
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M13.1585 3.05991L16.9401 6.84154L6.72705 17.0546L2.73544 17.8529C2.38557 17.9229 2.07711 17.6144 2.14709 17.2646L2.94541 13.273L13.1585 3.05991ZM4.17707 13.9321L13.1585 4.95072L15.0493 6.84154L6.06789 15.8229L3.70436 16.2956L4.17707 13.9321Z" fill="#CB11AB"/>
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M15.9948 7.78715L12.2132 4.00552L13.6313 2.5874C14.4145 1.8042 15.6843 1.8042 16.4675 2.5874L17.4129 3.53281C18.1961 4.31601 18.1961 5.58584 17.4129 6.36904L15.9948 7.78715ZM16.4675 5.42363C16.7286 5.16256 16.7286 4.73929 16.4675 4.47822L15.5221 3.53281C15.261 3.27174 14.8378 3.27174 14.5767 3.53281L14.104 4.00552L15.9948 5.89634L16.4675 5.42363Z" fill="#CB11AB"/>
+                </svg>
             </div>
             <p class="charge_deliveryAddress">
               Бишкек, улица Ахматбека Суюмбаева, 12/1
@@ -304,17 +306,19 @@
             />
             <p class="charge_tooltipCaption">
               Обратная доставка товаров на склад при отказе —
-              <a class="charge_tooltipCaption-underlined" href="#">бесплатно</a>
+              <span class="charge_tooltipCaption-underlined">бесплатно</span>
             </p>
+            <div class="charge_deliveryTooltip">
+              Если товары вам не подойдут, мы вернем их обратно на склад — это бесплатно
+            </div>
           </div>
           <div class="charge_payment">
             <div class="charge_paymentTitleWrap">
               <h3 class="charge_paymentTitle">Оплата картой</h3>
-              <img
-                src="./images/icons/icon-correct.svg"
-                alt="correct"
-                class="charge_correctBtn"
-              />
+              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none" class="charge_correctBtn">
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M13.1585 3.05991L16.9401 6.84154L6.72705 17.0546L2.73544 17.8529C2.38557 17.9229 2.07711 17.6144 2.14709 17.2646L2.94541 13.273L13.1585 3.05991ZM4.17707 13.9321L13.1585 4.95072L15.0493 6.84154L6.06789 15.8229L3.70436 16.2956L4.17707 13.9321Z" fill="#CB11AB"/>
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M15.9948 7.78715L12.2132 4.00552L13.6313 2.5874C14.4145 1.8042 15.6843 1.8042 16.4675 2.5874L17.4129 3.53281C18.1961 4.31601 18.1961 5.58584 17.4129 6.36904L15.9948 7.78715ZM16.4675 5.42363C16.7286 5.16256 16.7286 4.73929 16.4675 4.47822L15.5221 3.53281C15.261 3.27174 14.8378 3.27174 14.5767 3.53281L14.104 4.00552L15.9948 5.89634L16.4675 5.42363Z" fill="#CB11AB"/>
+                </svg>
             </div>
             <div class="charge_paymentData">
               <div class="charge_paymentSystem">
@@ -340,9 +344,7 @@
             <img src="./images/icons/icon-checked.svg" alt="checked" />
             <p class="charge_notification">
               Соглашаюсь с
-              <a href="#" class="charge_notification-underlined"
-                >правилами пользования торговой площадкой и возврата</a
-              >
+              <span class="charge_notification-underlined">правилами пользования торговой площадкой и возврата</span>
             </p>
           </div>
         </section>
